# PongRL

./: .gitignore  Makefile  README.md  ale_py-0.8.1-cp311-cp311-macosx_11_0_arm64.whl  diff.npy  obs.npy  pyproject.toml
pong/: karpathy.py  network.py  policy.py  pong.py  pong_chatgpt.py  pong_gym.py  pong_inference.py  pong_jit.py  pong_normal.py  pong_normal_no_vis.py  pong_rlx_gym.py  pong_rlx_style.py  reward_plot.py  testing.py  weights.py
results/: returns_1.npy  returns_2.npy  returns_3.npy  returns_4.npy  returns_5.npy  returns_6.npy  returns_7.npy  returns_unknown.npy
